--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
+    "react-scripts": "^5.0.1"
   }
 }
