--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsrsasign": "^10.9.0",
+    "jsrsasign-util": "^1.0.5",
     "moment-timezone": "^0.5.43",
     "mongoose": "^8.0.3",
     "react": "^18.2.0",
